@@ -46,6 +46,8 @@ ooo-xp.doc application/msword
 office.doc application/msword ox
 # Copied from http://bugzilla.abisource.com/show_bug.cgi?id=6435
 test-template.dot application/msword-template ox
+# Copied from http://www.ebooktechnologies.com/downloads/ocf10-20060911.epub
+ocf10-20060911.epub application/epub+zip
 
 # Playlist, subtitle and audio formats
 stream.nsc application/x-netshow-channel
